Bug 310664 - plasma-device crashes on startup
Summary: plasma-device crashes on startup
Status: RESOLVED FIXED
Alias: None
Product: Active
Classification: Unmaintained
Component: Plasma mobile shell (other bugs)
Version First Reported In: Master
Platform: unspecified Linux
: HI critical
Target Milestone: PA 4
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-25 18:52 UTC by Thomas Pfeiffer
Modified: 2012-12-07 15:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Crash report (9.27 KB, text/plain)
2012-11-25 18:53 UTC, Thomas Pfeiffer
Details
New crash information added by DrKonqi (6.15 KB, text/plain)
2012-12-04 21:57 UTC, Thomas Pfeiffer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Pfeiffer 2012-11-25 18:52:24 UTC
plasma-device crashes on every startup (see attached backtrace)

Reproducible: Always
Comment 1 Thomas Pfeiffer 2012-11-25 18:53:48 UTC
Created attachment 75473 [details]
Crash report
Comment 2 Aaron J. Seigo 2012-11-29 10:56:56 UTC
Git commit 75b765cb348087363e4e768eaf6ddda233198595 by Aaron Seigo.
Committed on 29/11/2012 at 11:55.
Pushed by aseigo into branch 'integration'.

remove dead code (which was also triggering a crash?)

M  +0    -2    shell/plasmaapp.cpp
M  +0    -2    shell/plasmaapp.h

http://commits.kde.org/plasma-mobile/75b765cb348087363e4e768eaf6ddda233198595
Comment 3 Thomas Pfeiffer 2012-11-30 16:19:06 UTC
Is there already a way to test this? Afaik there is no OBS repository tracking Integration, is there?
Comment 4 Aaron J. Seigo 2012-11-30 18:11:44 UTC
it's in master and Active/3, so hopefully it should be making its way into updates soon if it hasn't already.

if it is still crashing on start, the backtrace should at least be different ...
Comment 5 Thomas Pfeiffer 2012-11-30 18:33:17 UTC
Looks like it hasn't arrived yet. Package version of plasma-mobile is
0.4+git20121126.210129-1.20 and the crash still has the same backtrace.
Will wait until it's updated and then see if it's fixed.
Comment 6 Thomas Pfeiffer 2012-12-04 21:57:12 UTC
Created attachment 75630 [details]
New crash information added by DrKonqi

plasma-device (1.0) on KDE Platform 4.9.90 using Qt 4.8.3

This is the backtrace with plasma-mobile version 
0.4+git20121130.062126-1.12

-- Backtrace (Reduced):
#7  0xb561a3f1 in QtSharedPointer::ExternalRefCountData::getAndRef(QObject const*) () from /usr/lib/libQtCore.so.4
#8  0xb771a05f in QWeakPointer<Plasma::Containment> (ptr=0x9211d40, this=<optimized out>) at /usr/include/qt4/QtCore/qsharedpointer_impl.h:595
#9  operator=<Plasma::Containment> (ptr=0x9211d40, this=0x843c72c) at /usr/include/qt4/QtCore/qsharedpointer_impl.h:600
#10 PlasmaApp::changeContainment (this=0x843c708, containment=0x8fedd30) at ../../shell/plasmaapp.cpp:319
#11 0xb771bbc1 in PlasmaApp::containmentScreenOwnerChanged (this=0x843c708, wasScreen=-1, isScreen=0, cont=0x8fedd30) at ../../shell/plasmaapp.cpp:612
Comment 7 Thomas Pfeiffer 2012-12-04 21:58:54 UTC
As you can see, it still crashes but now with a shorter backtrace
Comment 8 Aaron J. Seigo 2012-12-07 15:46:21 UTC
Git commit 27d51fe0d7d77b1b3133100044717e8b17210761 by Aaron Seigo.
Committed on 29/11/2012 at 11:55.
Pushed by aseigo into branch 'master'.

remove dead code (which was also triggering a crash?)

M  +0    -2    shell/plasmaapp.cpp
M  +0    -2    shell/plasmaapp.h

http://commits.kde.org/plasma-mobile/27d51fe0d7d77b1b3133100044717e8b17210761