remove dead code (which was also triggering a crash?)

BUG:310664